<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".AuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/masukkan_6_kode_yang_telah_diterima_via_sms_ke_nomor_yang_telah_anda_masukkan"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAuthNumber"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:maxLength="6"
        android:hint="@string/code"/>

    <Chronometer
        android:id="@+id/view_timer"
        tools:targetApi="24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salah_no_hp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ubah_no_handphone"
                android:textStyle="bold"
                android:id="@+id/tvUbahHp"
                android:layout_marginLeft="16dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnConfirm"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/konfirmasi" />
    </LinearLayout>




</LinearLayout>